# datafall

./: 2024-08-21-16:28:44.621626058-UTC  2024-08-23-11:47:17.330380125-UTC  2024-08-23-15:02:28.825299355-UTC  Cargo.toml  README.md  TODO.md  build.rs  flake.nix  icons.toml  justfile
data/: icons.gresource.xml
src/: chunk.rs  components.rs  download_fragment.rs  file_metadata.rs  lib.rs  main.rs  resource_metadata.rs  split_download.rs
src/components/: about_dialog.rs  app.rs  clean_cache.rs  download_item.rs  new_download.rs
