[package]
name = "datafall"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.5", features = ["blocking"] }
dirs = "5.0.1"
tokio = { version = "1", features = ["full"] }
relm4 = { version = "0.8.0", features = ["libadwaita"] }
relm4-components = "0.8.0"
relm4-icons = "0.8.0"
