[package]
name = "datafall"
version = "1.0.0"
edition = "2021"

[build-dependencies]
glib-build-tools = "0.17.10"

[dependencies]
reqwest = { version = "0.12.5", features = ["blocking"] }
dirs = "5.0.1"
tokio = { version = "1", features = ["full"] }
chrono = "0.4.38"
fs_extra = "1.3.0"
base64 = "0.22.1"
relm4 = { version = "0.8.0", features = ["libadwaita", "gnome_46"] }
relm4-components = "0.8.0"
relm4-icons = "0.8.0"

[profile.release]
strip = true
